docs(benchmarks): adopt Spring Boot 4.1.0 and structured concurrency in ADR-003
Upgrade technology stack to StructuredTaskScope on Java 25 preview and align
OpenSpec design/tasks across scenarios 3-4 and the upstream example.

Co-authored-by: Cursor <cursoragent@cursor.com>